# kcombu_bss

./: .gitignore  INSTALL.md  README.md
.github/workflows/: main.yaml
actions/: collect_failed.py  update_recipe.py  upload_package.py
doc/: README_dkcombu.html  README_plkcombu.html
doc/img/: out.ps
example/: commands_ckcombu  commands_dkcombu  commands_fkcombu  commands_lkcombu  commands_pkcombu
example/2D_SDF/: EQP.sdf  SER.sdf  TYR.sdf  ZMR.sdf
example/3D_MOL2/: DT4.mol2  PHE.mol2  TYR.mol2
example/3D_SDF/: DT4.sdf
python/CCD_python/: ccd2sdf.py  split_ccd.py  split_ccd.py.20191126
python/fpython/: addHtoPDBfkcombu.py  avecurve.py  delHsulfonamide.py  dis_bwn_ligands.py  flxsup_to_pdb.py  mkMOL2frmPDB.py  mk_rkcombu.py  mk_subdir_odtar.py  mkligimg.py  mkliginfo.py  mkligprolist.py  mkligpromtx.py  mksup_matras.py  rmligfrmsum.py  self_success.py  sim_success.py  threepnts.py  wget_lig.py
python/kcombu/: allcmp_am.py  clus_kcombu.py  cmp_atommatch.py  count_files.py  cp_moldata.py  cpinv_atommatch.py  diff_hist.py  mk_atommatch.py  mk_dimer_atommatch.py  mk_enrich.py  mk_opensrc.py  mk_paste3D.py  pdb2box.py  ring2wrl.py  split_mol2.py  split_sdf.py  stat_range.py  sumCmpTwoGrp.py
python/lbox_python/: addSUPPLIERdes.py  gen2Dfrm3D.py  keggdrug_add3Did_to_2D.py  lbox_func.py  merge_schfiles.py  mk2D_3Did.py  mkPROPERTYlist.py  mkSUPPLIERlist.py  sele_rand_files.py  simcomp_recpre.py  split_mol2.py
python/moldraw/: ligandbox_func.py  moldraw.cgi  moldraw.cgi.20140709  molfunc.py  pca.py
python/moldraw_svg/: ALA.sdf  ASN.sdf  D01977.sdf  hello.cgi  kcombuweb_func.py  molecule.py  webfunc.py
python/schdraw/: extDBMkegg.py  molfunc.py  numpy_mds.py  pca.py  pyx_mol.py  rasatmtype.py  rmsd.py  slc.py
python/schdraw/fonts/: courR08.pcf
python/smi_python/: diffsmi.py  smisearch.py
python/supXOY_python/: ext_chain.py  pdb.py  suplig_fkcombu.py.20190602_1320
recipes/kcombu_bss/: LICENSE.txt  bld.bat  build.sh  meta.yaml  template.yaml
src/: 2DMAP.c  2DMAP.h  2dRMS.c  2dRMS.h  AtmPairDesc.c  AtmPairDesc.h  CMakeLists.txt  DABRL.ras  DualAtmPair.c  DualAtmPair.h  MOLECULE_from_CCD_CIF.c  MOLECULE_from_CCD_CIF.h  Makefile.ckcombu  Makefile.dkcombu  Makefile.fkcombu  Makefile.lkcombu  Makefile.pkcombu  MrgSrtLIBMOL.c  MrgSrtLIBMOL.h  MrgSrtMATCH.c  MrgSrtMATCH.h  PCAfit.c  PCAfit.h  README.txt  ReadOpt.c  ReadOpt.h  RingDesc.c  RingDesc.h  SmiComp.c  TreeUN.c  buildup.c  buildup.h  c_clique.c  c_clique.h  ckcombu.c  clique.c  clique.h  complile_SmiComp  complile_TreeUN  complile_propsearch  (+69 more)
src/CCD_python/: ccd2sdf.py.20191126
src/cluster/: cluster.py
src/doc/: README_ckcombu.html  README_fkcombu.html  README_lkcombu.html  README_mcs.html  README_pkcombu.html
src/fpython/: README_balloon.txt  README_shaep.txt  README_shaep_en.txt  ROC.py  averange.py  chk_ctime_mol2.py  chk_ctime_tarref_pdb.py  cmpSDFwithPDB.py  cp_sdf3d.py  get_multilig.py  get_uniseq.py  hist2D.py  mk3Dfrm2D_babel.py  mk3Dfrm2D_balloon.py  mk_fkcombu.py  mk_shaep.py  mkmodel_mligpro.py  prep_dock.py  submit_cores.py  sum2Dsim.py  sum3Dmodel.py  sum_molprop.py
src/lbox_python/: add3Did_to_2D.py  close_val_row.py  kcombu.py  split_sdf.py
src/moldraw/: image_mol.py  kcombuweb_func.py  matrix.py  molecule.py  rmsd.py
src/moldraw/fonts/: courR12.pcf
src/moldraw_svg/: kcombu_func.py  ligandbox_func.py  moldraw_svg.cgi  molfunc.py  rotplane.py  svg_mol.py
src/prop_python/: propana.py  propsearch.py  statprop.py
src/python/: chkCanSMILES.py  cmp2files.py  cp_pdbdata.py  cp_pdbdata.py.12Feb11  kcombu.py  mk_recpre.py  mkdes_mdir.py  scan_kcombu.py  supplier_ana.py
src/sample_molecules/: commands_ckcombu  commands_dkcombu  commands_fkcombu  commands_lkcombu
src/sample_molecules/2D_SDF/: ASP.sdf  D09883.sdf  DAN.sdf  G39.sdf  PHE.sdf  SIA.sdf
src/sample_molecules/3D_SDF/: ATP.sdf  N41.sdf
src/schdraw/: .molecule.py.swp  avadraw.py  image_mol.py  mds.py  mkDBMkeg.py  molecule.py  phipsi.py  rotbond.py  schdraw.py
src/schdraw/fonts/: courR10.pcf
src/smi_python/: anasmicomp.py  calRMSDtriple.py  chkChiralForIdSmi.py  extSameEquivLig.py  sim2anno.py
src/supXOY_python/: renum_pdb.py  supXOYatms.py  suplig_fkcombu.py
